# psa-arch-tests

./: .gitignore  .gitmodules  README.md
api-tests/: CMakeLists.txt  README.md
api-tests/dev_apis/: README.md
api-tests/dev_apis/crypto/: 1.0-beta2_testsuite.db  1.0.0_testsuite.db  1.1.0_testsuite.db  suite.cmake  testsuite.db
api-tests/dev_apis/crypto/common/: test_crypto_common.c  test_crypto_common.h
api-tests/dev_apis/crypto/test_c001/: source.mk  test.cmake  test_c001.c  test_c001.h  test_entry_c001.c
api-tests/dev_apis/crypto/test_c002/: source.mk  test.cmake  test_c002.c  test_c002.h  test_data.h  test_entry_c002.c
api-tests/dev_apis/crypto/test_c003/: source.mk  test.cmake  test_c003.c  test_c003.h  test_data.h  test_entry_c003.c
api-tests/dev_apis/crypto/test_c004/: source.mk  test.cmake  test_c004.c  test_c004.h  test_data.h  test_entry_c004.c
api-tests/dev_apis/crypto/test_c005/: source.mk  test.cmake  test_c005.c  test_c005.h  test_data.h  test_entry_c005.c
api-tests/dev_apis/crypto/test_c006/: source.mk  test.cmake  test_c006.c  test_c006.h  test_data.h  test_entry_c006.c
api-tests/dev_apis/crypto/test_c007/: source.mk  test.cmake  test_c007.c  test_c007.h  test_data.h  test_entry_c007.c
api-tests/dev_apis/crypto/test_c008/: source.mk  test.cmake  test_c008.c  test_c008.h  test_data.h  test_entry_c008.c
api-tests/dev_apis/crypto/test_c009/: source.mk  test.cmake  test_c009.c  test_c009.h  test_data.h  test_entry_c009.c
api-tests/dev_apis/crypto/test_c010/: source.mk  test.cmake  test_c010.c  test_c010.h  test_data.h  test_entry_c010.c
api-tests/dev_apis/crypto/test_c011/: source.mk  test.cmake  test_c011.c  test_c011.h  test_data.h  (+1 more)
api-tests/dev_apis/initial_attestation/: 1.0.1_testsuite.db  dummy.txt  suite.cmake  testsuite.db
api-tests/dev_apis/internal_trusted_storage/: suite.cmake  testsuite.db
api-tests/dev_apis/protected_storage/: README.md  suite.cmake  testsuite.db
api-tests/dev_apis/secure_storage/: dummy.txt
api-tests/dev_apis/storage/: its_1.0-beta2_testsuite.db  its_testsuite.db  ps_1.0_testsuite.db  ps_testsuite.db  suite.cmake  test_storage_common.h
api-tests/docs/: Arm_PSA_FF_Arch_Test_Porting_Guide.md  FAQ-compliance.md  porting_guide.md  porting_guide_dev_apis.md  porting_guide_ff.md  psa_attestation_testlist.md  psa_crypto_testlist.md  psa_ipc_testlist.md  psa_its_testlist.md  psa_ps_testlist.md  psa_storage_testlist.md  sw_requirements.md  test_failure_analysis.md
api-tests/ff/: README.md
api-tests/ff/ipc/: stateless_rot_testsuite.db  suite.cmake  testsuite.db
api-tests/ff/partition/: client_partition.c  client_partition.h  driver_partition.c  server_partition.c
api-tests/platform/manifests/: client_partition_psa.json  driver_partition_psa.json  server_partition_psa.json
api-tests/tools/makefiles/: Makefile  spbuild.mk  testbuild.mk  toolchain.mk  valbuild.mk
api-tests/tools/scripts/: gen_tests_list.pl  gen_tests_list.py  manifest_update.py  process_test_linker_file.pl  setup.sh  targetConfigGen.pl  test_elf_combine.pl
api-tests/tools/utils/: README.md  log_analysis_tool.py
api-tests/val/: val_nspe.cmake  val_spe.cmake
api-tests/val/common/: val.h  val_target.c  val_target.h
api-tests/val/nspe/: pal_interfaces_ns.h  val_attestation.c  val_attestation.h  val_crypto.c  val_crypto.h  val_dispatcher.c  val_dispatcher.h  val_entry.c  val_entry.h  val_framework.c  val_framework.h  val_interfaces.c  val_interfaces.h  val_internal_trusted_storage.c  val_internal_trusted_storage.h  val_peripherals.c  val_peripherals.h  val_platform.c  val_platform.h  val_protected_storage.c  val_protected_storage.h  val_storage.c  val_storage.h
api-tests/val/spe/: pal_interfaces_s.h  val_driver_service_apis.c  val_driver_service_apis.h  val_partition_common.h  val_service_defs.h
secure-debug/: CMakeLists.txt  README.md  psa_adac_acs_host.patch  psa_adac_acs_tgt.patch  psa_adac_ats.patch
secure-debug/crypto/: manager-crypto-config.h  mbedcrypto.cmake
secure-debug/crypto/psa-crypto/: CMakeLists.txt  adac_crypto_psa.c  adac_crypto_psa.h  adac_crypto_psa_hash.c  adac_crypto_psa_mac.c  adac_crypto_psa_pk.c
secure-debug/docs/: porting_guide_adac_host.md  psa_adac_scenarios.md  test_failure_analysis.md
secure-debug/platform/common/: pal.cmake
secure-debug/platform/native/: CMakeLists.txt
secure-debug/tests/adac/: suite.cmake  testsuite.db
secure-debug/tools/scripts/: gen_tests_list.py
secure-debug/val/: val.cmake
secure-debug/val/include/: pal_interfaces.h  val.h  val_adac.h  val_dispatcher.h  val_entry.h  val_framework.h  val_interfaces.h  val_peripherals.h
secure-debug/val/src/: val_adac.c  val_dispatcher.c  val_entry.c  val_framework.c  val_interfaces.c  val_peripherals.c
tbsa-v8m/: CMakeLists.txt  Makefile  README.md
tbsa-v8m/cmake/common/: CMakeSettings.cmake  Utils.cmake
tbsa-v8m/cmake/compiler/: GNUARM.cmake
tbsa-v8m/docs/: Arm_TBSA-v8M_Arch_Test_Porting_Guide.md
tbsa-v8m/platform/include/: pal_common.h
tbsa-v8m/tbsa_app/: tbsa.h  tbsa_main.c
tbsa-v8m/test_pool/: Makefile  tbsa_elf_combine.pl
tbsa-v8m/test_pool/crypto/: Makefile
tbsa-v8m/test_pool/debug/: Makefile
tbsa-v8m/test_pool/interrupts/: Makefile
tbsa-v8m/test_pool/peripherals/: Makefile
tbsa-v8m/tools/: test_elf_combine.py
tbsa-v8m/tools/debug/: README.txt  debugger_script.ini  debugger_script.py
tbsa-v8m/tools/gen_linker_scripts/: gen_linker_scripts.py  linker_address_length.py  tbsa.linker.template  test.linker.template
tbsa-v8m/tools/gen_pal_api_table/: README.md  gen_pal_api.py
tbsa-v8m/tools/tgt_cfg_parser/: CMakeLists.txt  targetConfigGen.pl  targetConfigGen.py
tbsa-v8m/val/: val.cmake
tbsa-v8m/val/include/: pal_interfaces.h  val_common.h  val_crypto.h  val_debug.h  val_fuse.h  val_infra.h  val_interfaces.h  val_interrupt.h  val_pe.h  val_peripherals.h  val_secure.h  val_target.h  val_test.h  val_test_common.h
tbsa-v8m/val/src/: val_crypto.c  val_debug.c  val_dispatcher.c  val_fuse.c  val_infra.c  val_interfaces.c  val_interrupt.c  val_ns_callable.c  val_pe.c  val_peripherals.c  val_test.c
(+2063 files in other folders)
